[package]
name = "runtime"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew={version="0.17.2"}
anymap="0.12"
serde={version="1", features=["derive"]}
serde_json="1"
unsafe-any="0.4"