[package]
name = "ast"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
# serde is used to cache parsed schemas
serde={version="1", features=["derive"]}
serde_json="1"
thiserror = "1"